guides/v3.25.0/code-editors/index.md
During development, add Ember.js specific extensions to your code editor for added functionality. Below is a list of some of the extensions available, many of which are created and maintained by the developer community:  

## Visual Studio Code

Visual Studio Code is a code editor optimized for building and debugging modern web applications. Visual Studio Code is one of the most popular text editors among Ember developers.

[Ember Language Server](https://marketplace.visualstudio.com/items?itemName=EmberTooling.vscode-ember) - Provides autocomplete in templates and allows go-to-definition behavior within Ember projects.

[Unstable Ember Language Server](https://marketplace.visualstudio.com/items?itemName=lifeart.vscode-ember-unstable) - A popular fork of Ember Language Server with different features.

[Ember JS (ES6) and Handlebars code snippets](https://marketplace.visualstudio.com/items?itemName=phanitejakomaravolu.EmberES6Snippets) - Enables Ember.js and Handlebars snippets to let you to type less and code more.

[EditorConfig for Visual Studio Code](https://marketplace.visualstudio.com/items?itemName=EditorConfig.EditorConfig) - Attempts to override user/workspace settings with settings found in `.editorconfig` files. The `.editorconfig` file helps developers define and maintain consistent coding styles between different editors and IDEs.

[Glimmer Templates Syntax](https://marketplace.visualstudio.com/items?itemName=lifeart.vscode-glimmer-syntax) - Syntax formatting for glimmer templates.

[Prettier for Handlebars](https://marketplace.visualstudio.com/items?itemName=Alonski.prettier-for-handlebars-vscode) - Format your handlebars files with Prettier ...that's it! Note, because this uses the currently unreleased Prettier, it may break with future changes to Prettier.

## Vim

Vim is a highly configurable text editor built to make creating and changing any kind of text very efficient. It is included as "vi" with most UNIX systems and with Apple OS X. 

[ember.vim](https://github.com/dsawardekar/ember.vim) - Shortcuts to navigate related files with Ember.js projects.

[vim-ember-hbs](https://github.com/joukevandermaas/vim-ember-hbs) - Add Ember template syntax highlighting and indentation to Vim.

[Ember Tools](https://github.com/AndrewRadev/ember_tools.vim) - Various tools for working with Ember.js projects.

## Atom

Atom is hackable text editor for the 21st Century.

[emberjs-atom](https://atom.io/packages/emberjs-atom) - Atom autocomplete and snippets for Ember.js.

[atom-ember-snippets](https://github.com/mattmcmanus/atom-ember-snippets) - Ember.js ES6, Ember Data & Handlebars snippets for Atom editor.

[atom-ide-ember](https://github.com/josa42/atom-ide-ember) - Atom package to use the Ember Language Server.

## Sublime Text

A sophisticated text editor for code, markup and prose.

[ember-cli-sublime-snippets](https://github.com/terminalvelocity/ember-cli-sublime-snippets) - Ember CLI snippets for Sublime Text 3.

[ember-component-template-split-view](https://github.com/mmitchellgarcia/ember-component-template-split-view) - Super simple Sublime Text plugin that will let you open corresponding template or route files with Ember.js components.

## Neovim

An honorable mention to Neovim, a hyper-extensible Vim-based text editor with a range of ember extensions. You'll want to remove any linter / completion manager you currently have installed (or disable them for `.js`, `.ts` or `.hbs` files), and follow the install guides for the following packages:

[Conquer for Completion (COC) for Neovim](https://github.com/neoclide/coc.nvim) -  an Intellisense engine for Neovim which takes control over all linting, hinting, and language-server integration.

[coc-ember](https://github.com/NullVoxPopuli/coc-ember) - Ember.js language server extension including useful configuration instructions.

Optional addons for Neovim's Ember Language Server:
- [els-addon-docs](https://github.com/lifeart/els-addon-docs)
- [els-addon-typed-templates](https://github.com/lifeart/els-addon-typed-templates)
- [ember-fast-cli](https://github.com/lifeart/ember-fast-cli)
- [vim-ember-hbs](https://github.com/joukevandermaas/vim-ember-hbs)
- [vim-javascript](https://github.com/pangloss/vim-javascript)
- [vim-js-pretty-template](https://github.com/Quramy/vim-js-pretty-template)
